[package]
name = "storyarchive"
version = "0.1.0"
authors = ["Txuritan <txurtian@yahoo.com>"]

[dependencies]
bson = "0.10"
config = "0.8"
mongodb = "0.3"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = { version = "0.3", default-features = false, features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
